# laces

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  testmanage.py  tox.ini
.github/: pull_request_template.md
.github/scripts/: report_nightly_build_failure.py
.github/workflows/: nightly.yml  publish.yml  test.yml
laces/: __init__.py  apps.py  components.py  protocols.py  typing.py  urls.py  views.py  wagtail_hooks.py
laces/templatetags/: laces.py
laces/test/: __init__.py  apps.py  components.py  settings.py  urls.py
laces/test/components/: __init__.py  heading.py
laces/test/components/templates/components/: static-template.html
laces/test/example/: components.py  views.py
laces/test/example/templates/components/: hello-self-name.html  list-section.html  section.html
laces/test/example/templates/pages/: kitchen-sink.html  single-component.html  tag-examples.html
laces/test/home/: views.py
laces/test/home/templates/home/: home.html
laces/test/tests/: test_components.py  test_views.py
laces/tests/: test_components.py
laces/tests/test_templatetags/: test_laces.py
