[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "laces"
authors = [{name = "Tibor Leupold", email = "tibor@lpld.io"}]
description = "Django components that know how to render themselves."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "Django>=3.2",
]
[project.optional-dependencies]
testing = [
    "dj-database-url==2.1.0",
    "pre-commit==3.4.0",
    "coverage==7.3.4",
]
ci = [
    "tox==4.12.1",
    "tox-gh-actions==3.2.0",
    # Allow use of pyenv for virtual environments. To enable you need to set `VIRTUALENV_DISCOVERY=pyenv` in the shell.
    # This is useful to help tox find the correct python version when using pyenv.
    "virtualenv-pyenv==0.4.0"
]

[project.urls]
Home = "https://github.com/tbrlpld/laces"

[tool.flit.module]
name = "laces"

[tool.flit.sdist]
exclude = [
    "laces/static_src",
    "laces/test",
    "laces/static/laces/js/.gitignore",
    "testmanage.py",
    ".*",
    "*.js",
    "*.json",
    "*.ini",
    "*.yml"
]
